# augment-token-mng

./: CHANGELOG.md  CONTRIBUTORS.md  README.md  package.json  release.ps1  vite.config.js
.github/workflows/: release.yml
scripts/: release.ps1  release.sh
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_utils.rs  augment_oauth.rs  bookmarks.rs  cache.rs  error.rs  http_server.rs  main.rs  storage.rs
src/components/: BookmarkManager.vue  LanguageToggle.vue  NotificationCenter.vue  ThemeToggle.vue  TokenCard.vue  TokenForm.vue  TokenGenerator.vue  TokenList.vue
src/composables/: useI18n.js  useNotification.js  useSettings.js  useTheme.js
