[package]
name = "augment-token-manager"
version = "0.1.4"
description = "Augment Token Manager - 用于生成和管理 Augment OAuth 访问令牌的桌面应用（性能优化版）"
authors = ["hj01857655", "zhaochengcube (original author)"]
license = "MIT"
repository = "https://github.com/hj01857655/augment-token-mng"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "time", "macros"] }
warp = { version = "0.3", default-features = false, features = ["tokio"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
